--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/multer": "^2.0.0",
     "@types/nodemailer": "^6.4.13",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
@@ -43,6 +44,7 @@
     "http-status": "^1.6.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
+    "multer": "^2.0.2",
     "nodemailer": "^6.9.7",
     "redis": "^4.6.8",
     "winston": "^3.9.0",
