--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 node_modules
 .env
-public/*.*
-!public/.gitkeep
-public/*/*.*
-!public/*/.gitkeep
+!/public/*
+!/public/**/.gitkeep
+!/public/.gitkeep
 logs
 *.log
